// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headings with headline data should render correctly 1`] = `
<ForwardRef>
  <ForwardRef
    text="This is a headline!"
  >
    This is a headline!
  </ForwardRef>
</ForwardRef>
`;

exports[`Headings with subheadline data should render correctly 1`] = `
<ForwardRef>
  <ForwardRef
    text="This is a subheadline"
  >
    This is a subheadline
  </ForwardRef>
</ForwardRef>
`;
